--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script type="text/javascript" src="assets/javascript/old code.js"></script>
+        <script type="text/javascript" src="assets/javascript/game.js"></script>
     </body>
     </html>
     
